[metadata]
name = tungsten-tempest
summary = tungsten-tempest is a tool for verifying that Role-Based Access Control is being enforced across contrail deployments.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/tungsten-tempest/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.5

[files]
packages = tungsten_tempest_plugin

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tungsten-tempest/locale
domain = tungsten-tempest

[update_catalog]
domain = tungsten-tempest
output_dir = tungsten-tempest/locale
input_file = tungsten-tempest/locale/tungsten-tempest.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tungsten-tempest/locale/tungsten-tempest.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[entry_points]
tempest.test_plugins =
    tungsten_tempest_tests = tungsten_tempest_plugin.plugin:TungstenTempestPlugin
oslo.config.opts =
    tungsten_tempest.config = tungsten_tempest_plugin.config:list_opts
